--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <iframe 
     id="video" 
-    width="100vw" 
-    height="100vh" 
+    width="100%" 
+    height="100%" 
     src="https://www.youtube.com/embed/5O0VzuBUCGc" 
     title="YouTube video player" 
     frameborder="0" 
