--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     id="video" 
     width="100%" 
     height="100%" 
-    src="https://www.youtube.com/embed/5O0VzuBUCGc" 
+    src="https://www.youtube.com/embed/5O0VzuBUCGc?autoplay=1" 
     title="YouTube video player" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -30,8 +30,24 @@
 
   <script>
     setTimeout(() => {
+      const path = window.location.href
+      const url = new URL(path)
+
+      document.body.innerHTML = 
+      `
+        <iframe
+          id='video'
+          width='100%'
+          height='100%'
+          src='${url.searchParams.get('video')}?autoplay=1'
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+        ></iframe>
+      `
+      
       document.querySelector('#video').requestFullscreen()
-    }, 5000)
+    }, 2000)
   </script>
 </body>
 </html>
