--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           id='video'
           width='100%'
           height='100%'
-          src='${url.searchParams.get('video')}?autoplay=1'
+          src='${url.searchParams.get('video')}?autoplay=1&mute=1'
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
           allowfullscreen
