--- a/index.html
+++ b/index.html
@@ -12,22 +12,11 @@
       height: 100vh;
       margin: 0;
       overflow: hidden;
+      background: black;
     }
   </style>
 </head>
 <body>
-  <iframe 
-    id="video" 
-    width="100%" 
-    height="100%" 
-    src="https://www.youtube.com/embed/5O0VzuBUCGc?autoplay=1" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    allowfullscreen
-    autoplay="1"
-    ></iframe>
-
   <script>
     setTimeout(() => {
       const path = window.location.href
